--- a/projects/landing-page/style.css
+++ b/projects/landing-page/style.css
@@ -119,3 +119,74 @@ button {
     text-align: center;
 }
 
+.author {
+    text-align: end;
+}
+
+.quote {
+    font-size: 25px;
+    padding: 40px 430px;
+    background-color: #E5E7EB;
+}
+
+.quoted {
+    padding: 0px 100px;
+    text-align: center;
+    font-size:25px;
+    font-style: italic;
+    margin-bottom: 15px;
+    text-align: justify;
+}
+
+.sign-up {
+    margin: 0;
+
+    height: 250px;
+    width: 100%;
+    background-color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box3 {
+    background-color: #3882F6;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 400px;
+    border-radius: 40px;
+    color: white;
+    padding: 0 130px;
+
+    
+}
+
+.sign {
+    border: 2px white solid;
+}
+
+.h2 {
+    margin: 0px;
+    font-size: 25px;
+}
+
+.h5 {
+    font-size: 15px ;
+    font-weight: lighter;
+}
+
+.copyright {
+    height: 46px;
+    background-color: #1f2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+h1 {
+    font-size: 13px;
+    color:white;
+}
