--- a/fullStackJavascript/intermidiateCSS/forms/forms.css
+++ b/fullStackJavascript/intermidiateCSS/forms/forms.css
@@ -1,9 +1,19 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&display=swap');
 
+:root{
+    --base-color:hsl(240, 3%, 14%);
+    --font-color:white;
+    --left-color:rgb(45,45,45);
+    --gradient-1:rgb(117, 241, 72);
+    --gradient-2:rgb(31, 160, 11);
+    --span-color:rgb(179, 174, 174);
+    --transition-color: rgb(29, 214, 29);
+    --radius-color: grey;
+}
 
 body {
-    background-color: hsl(240, 3%, 14%);
+    background-color: var(--base-color);
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -11,28 +21,36 @@ body {
     height:100vh;
     margin:0;
     font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color:white;
+    color:var(--font-color);
 }
 
 .main {
-    height: 600px;
+    height: 570px;
     width: 1000px;
+    border: 1px solid var(--radius-color);
+    border-radius: 30px ;
     display: flex;
-    
+    overflow: hidden;
 }
 
 .left {
-    background-color:rgb(45, 45, 45);
-    flex:2;
-    display: flex;
-    flex-direction: column;
+    background-color:var(--left-color);
+    flex:3;
+    
 }
 
 .register {
     font-family: "Baloo Paaji 2", sans-serif;
-    font-size: 50px;
-    margin: 20px 0px 20px 40px;
+    font-size: 70px;
+    margin: 25px 0px 20px 40px;
     
+}
+
+.trademark {
+    font-size:15px;
+    position: relative;
+    bottom:25px;
+    right:10px;
 }
 
 .form {
@@ -40,25 +58,76 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap:30px;
+
    
 
 }
 
 input {
-    width:250px;
-    height:27px;
+    width:257px;
+    height:40px;
     border-radius: 3.5px;
     border:0;
-    background-color: rgb(45, 45, 45);
-    border-bottom: 2px solid white;
+    background-color: var(--left-color);
+    border-bottom: 2px solid var(--font-color);
+    color: var(--font-color);
+    display: block;
+    position: relative;
+    font-size: 1.05em;
+}
+
+.input {
+    position:relative;
+    
 }
 
 .right {
-    background: linear-gradient(to left, rgb(76, 217, 24), rgb(27, 130, 11));
-    flex:3;
+    background: linear-gradient(to left, var(--gradient-1), var(--gradient-2));
+    flex:4;
 }
 
 .submit {
     margin: 20px 0px 0px 40px;
     
 }
+
+span {
+    position: absolute;
+    top: 13px;
+    color: var(--span-color);
+    transition: 0.3s;
+}
+
+
+.submit {
+    width: 140px;
+    height: 35px;
+    border-radius: 30px;
+    border: none;
+    background-color: var(--gradient-2);
+    position: relative;
+    left: 65px;
+    top: 10px;
+    font-size: 20px;
+    font-family: "Baloo Paaji 2", sans-serif;
+    font-weight: 500;
+    color: var(--font-color);
+  
+}
+
+input:focus {
+    border: 2px solid  var(--transition-color);
+    box-shadow: 0 0 5px var(--radius-color);
+    outline: none;
+    border-radius: 8px;
+}
+
+input:focus ~ span {
+    transform: translateX(-3px) translateY(-25px);
+    border-radius: 4px;
+    color: var(--font-color);
+    padding:1px 4px 1px 4px;
+    background-color: var(--transition-color);
+    font-size: .9em;
+}
+
